[gd_scene load_steps=5 format=3 uid="uid://b18kcqwgc04vf"]

[ext_resource type="Texture2D" uid="uid://d3p81cgopakdo" path="res://minigames/hyena_clicker/assets/buttons/shop button.png" id="1_6o5cf"]
[ext_resource type="FontFile" uid="uid://civq6m1ieh0f7" path="res://fonts/CookieRun Bold.ttf" id="2_64jpg"]
[ext_resource type="Script" path="res://minigames/hyena_clicker/misc/shop_button/shop_button.gd" id="2_oax7d"]
[ext_resource type="Texture2D" uid="uid://b75100afguqp6" path="res://minigames/hyena_clicker/assets/buttons/yena shop.png" id="4_nbes4"]

[node name="Shop Button" type="TextureButton"]
offset_right = 335.0
offset_bottom = 82.0
texture_normal = ExtResource("1_6o5cf")
script = ExtResource("2_oax7d")

[node name="PriceText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -1203.0
offset_top = 21.0
offset_right = 261.0
offset_bottom = 58.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.152941, 0, 0.372549, 1)
theme_override_fonts/normal_font = ExtResource("2_64jpg")
theme_override_font_sizes/normal_font_size = 24
text = "x1"
fit_content = true
text_direction = 2

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 22.0
offset_right = 229.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.152941, 0, 0.372549, 1)
theme_override_fonts/normal_font = ExtResource("2_64jpg")
theme_override_font_sizes/normal_font_size = 24
text = "ITEM TITLE"

[node name="Hyena" type="Sprite2D" parent="."]
position = Vector2(296, 38)
scale = Vector2(0.724026, 0.724026)
texture = ExtResource("4_nbes4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
